--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar-inverse" style="position:sticky;top:0;z-index:99999">
+    <nav class="navbar-default" style="position:sticky;top:0;z-index:99999">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
@@ -27,8 +27,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li><a href="#home">School</a></li>
-                <li><a href="#camous">Campus Life</a></li>
-                <li><a href="#acomplish">Acomplishments</a></li>
+                <li><a href="#campus">Campus Life</a></li>
                 <li><a href="#news">What's New</a></li>
                 <li><a href="#curriculum">Curriculum</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -43,6 +42,84 @@
             <img src="tbs-logo.png" id="tbs-logo">
             <p>Our school is an <b>upper elementary</b> school for grades 5-6. It is located in <i>Avon, Connecticut, USA</i>.</p>
         </div>
+    </section>
+
+
+    <section id="campus">
+        <div id="campusdiv">
+            <h1>Campus Life</h1>
+            <div class="bg-primary movie_head" data-toggle="collapse" data-target="#librTxt">
+                <span>Media Center/Library</span>
+            </div>
+            <div id="librTxt" class="collapse">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <img src="EmbeddedImage.jpg" class="img-responsive img-thumbnail">
+                </div>
+
+                <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+                    <h5 class="text-success text-left text-capitalize"><kbd>Library/Media Center</kbd></h5>
+                    <p>Great place to read books, do homework and code</p>
+                </div>
+            </div>
+
+            <br><br><br>
+            <hr><br><br><br>
+
+            <div class="bg-primary movie_head" data-toggle="collapse" data-target="#front">
+                <span>Front Entrance</span>
+            </div>
+            <div id="front" class="collapse">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <img src="1056.jpg" class="img-responsive img-thumbnail">
+                </div>
+
+                <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+                    <h5 class="text-success text-left text-capitalize"><kbd>Front Entrance</kbd></h5>
+                    <p>The entrance to the best building in the world!</p>
+                </div>
+            </div>
+
+            <br><br><br>
+            <hr><br><br><br><br><br><br><br><br>
+
+            <div class="bg-primary movie_head" data-toggle="collapse" data-target="#recess">
+                <span>Playground</span>
+            </div>
+            <div id="recess" class="collapse">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <img src="TBSsign.jpg" class="img-responsive img-thumbnail">
+                </div>
+
+                <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+                    <h5 class="text-success text-left text-capitalize"><kbd>Playground</kbd></h5>
+                    <p>Everyone loves playtime, right?</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <br><br><br>
+            <hr><br><br><br>
+
+
+
+    <section id="news">
+    <div id="newsdiv">
+    <h1>News</h1>
+    <ul>
+    <li class="list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment-li">
+    <h4>New TBS school year starts!</h4>
+    <img src="TBSsign.jpg" class="img-responsive col-lg-7 col-md-7 col-sm-7 col-xs-12">
+    <p class="list-group-item-text">The new 2021-2022 school year has begun!</p>
+    </li>
+    <hr>
+    <li class="list-group-item-info col-lg-12 col-md-12 col-sm-12 col-xs-12 environment-li">
+    <h4>TBS Winding Trails field trip looms ahead!</h4>
+    <img src="EmbeddedImage.jpg" class="img-responsive col-lg-7 col-md-7 col-sm-7 col-xs-12">
+    <p class="list-group-item-text">The winding Trails field trip is coming!</p>
+    </li>
+    </ul>
+    </div>
     </section>
 
 
